--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,7 @@ footer {
     background-color: white;
     color: black;
     height: 70px;
+    background: Linear-gradient(245.59deg, #ccfc3b 0%, #c7ec68 28.53%, #bbd71d 75.52%);
 }
 
 footer p {
